--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Random French</title>
+  <link href="normalize.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
 </head>
 <body>
-<div id="french"></div>
-<button id="btn">Generate Phrase</button>
+<section class="french-wrapper">
+  <div class="french" id="french"></div>
+  <button class="btn" id="btn">D&icirc;tes-moi.</button>
+</section>
 <script src="main.js"></script>
 </body>
 </html>
